[package]
name = "memflow-reclass-plugin"
version = "0.2.0-beta10"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
description = "ReClass.NET plugin for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-reclass-plugin"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-reclass-plugin"
license = "MIT"
keywords = [ "memflow", "introspection", "memory", "dma", "reclass" ]
categories = [ "memory-management", "os" ]
build = "build.rs"

[lib]
name = "memflow_reclass"
crate-type = ["cdylib"]

[package.metadata.winres]
FileDescription = "memflow"
ProductName = "ReClass.NET Native Plugin"
ProductVersion = "0.1.1"
OriginalFilename = "memflow_reclass.dll"
LegalCopyright = "Copyright © 2020-2021"
Comments = "The memflow ReClass.NET connects to a Process running on a memflow target. See https://github.com/memflow/memflow for more about memflow."
CompanyName = "ko1N, h33p"

[dependencies]
log = "0.4.8"
simple-logging = "2.0.2"
memflow = { version = "=0.2.0-beta10", features = ["plugins"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
